--- a/adwatch_app/pubspec.yaml
+++ b/adwatch_app/pubspec.yaml
@@ -21,9 +21,11 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  table_calendar: ^3.0.0
   flutter:
     sdk: flutter
   flutter_svg: ^0.17.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
